--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="email_username">Email/Username</string>
     <string name="password">Password</string>
     <string name="sign_in">Sign in</string>
+    <string name="neta_info">Neta Info</string>
+    <string name="notification">Notification</string>
+    <string name="submit_problem">Submit Problem</string>
+    <string name="logout">Logout</string>
+    <string name="hi">Hi,</string>
 </resources>
