--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="email_username">Email/Username</string>
     <string name="password">Password</string>
     <string name="sign_in">Sign in</string>
+    <string name="logout">logout</string>
+    <string name="hello">hello</string>
+    <string name="submit_problem">submit_problem</string>
+    <string name="notification">notification</string>
+    <string name="neta_info">netainfo</string>
 </resources>
