--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="submit_problem">submit_problem</string>
     <string name="notification">notification</string>
     <string name="neta_info">netainfo</string>
+    <string name="hello_counsellor">Hello Counsellor</string>
 </resources>
