--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,10 @@
     <string name="neta_info">netainfo</string>
     <string name="hello_counsellor">Hello Counsellor</string>
     <string name="title_activity_compose__mcd">compose_MCD</string>
+    <string name="title_activity_tabbed_">tabbed_Activity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_3">Tab 3</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
